test/log/iir/vsrdotiirq_v_i32_d3s3.txt
vsrdotiirq_v_i32_d3s3.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsrdotiirq_v_i32_d3s3.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsrdotiirq_v_i32_d3s3.c:20:40: warning: backslash and newline separated by space
   20 |  #define data_init(a, b, n, threshold) \
      |                                         
vsrdotiirq_v_i32_d3s3.c:21:35: warning: backslash and newline separated by space
   21 |      for(int i = 0; i < n; i++) { \
      |                                    
vsrdotiirq_v_i32_d3s3.c:22:40: warning: backslash and newline separated by space
   22 |              a[i] = random(threshold); \
      |                                         
vsrdotiirq_v_i32_d3s3.c:23:27: warning: backslash and newline separated by space
   23 |              b[i] = a[i]; \
      |                            
vsrdotiirq_v_i32_d3s3.c:29:6: warning: no previous prototype for 'vsrdotiirq_v_i32_d3s3_golden' [-Wmissing-prototypes]
   29 | void vsrdotiirq_v_i32_d3s3_golden(int32_t base[],int32_t *a,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
vsrdotiirq_v_i32_d3s3.c: In function 'vsrdotiirq_v_i32_d3s3_golden':
vsrdotiirq_v_i32_d3s3.c:31:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   31 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vsrdotiirq_v_i32_d3s3.c:31:1: note: each undeclared identifier is reported only once for each function it appears in
vsrdotiirq_v_i32_d3s3.c:31:9: error: expected ';' before 'Line'
   31 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vsrdotiirq_v_i32_d3s3.c:29:43: warning: unused parameter 'base' [-Wunused-parameter]
   29 | void vsrdotiirq_v_i32_d3s3_golden(int32_t base[],int32_t *a,int32_t *exp_result) {
      |                                   ~~~~~~~~^~~~~~
vsrdotiirq_v_i32_d3s3.c:29:59: warning: unused parameter 'a' [-Wunused-parameter]
   29 | void vsrdotiirq_v_i32_d3s3_golden(int32_t base[],int32_t *a,int32_t *exp_result) {
      |                                                  ~~~~~~~~~^
vsrdotiirq_v_i32_d3s3.c:29:70: warning: unused parameter 'exp_result' [-Wunused-parameter]
   29 | void vsrdotiirq_v_i32_d3s3_golden(int32_t base[],int32_t *a,int32_t *exp_result) {
      |                                                             ~~~~~~~~~^~~~~~~~~~
vsrdotiirq_v_i32_d3s3.c: In function 'main':
vsrdotiirq_v_i32_d3s3.c:22:15: error: subscripted value is neither array nor pointer nor vector
   22 |              a[i] = random(threshold); \
      |               ^
vsrdotiirq_v_i32_d3s3.c:46:5: note: in expansion of macro 'data_init'
   46 |     data_init(a, exp_a, 16*3, 0xffffffff);
      |     ^~~~~~~~~
vsrdotiirq_v_i32_d3s3.c:23:22: error: subscripted value is neither array nor pointer nor vector
   23 |              b[i] = a[i]; \
      |                      ^
vsrdotiirq_v_i32_d3s3.c:46:5: note: in expansion of macro 'data_init'
   46 |     data_init(a, exp_a, 16*3, 0xffffffff);
      |     ^~~~~~~~~
vsrdotiirq_v_i32_d3s3.c:64:76: warning: format '%x' expects argument of type 'unsigned int', but argument 6 has type 'int32_t' {aka 'long int'} [-Wformat=]
   64 |                 printf("Failed: result.val[%d][%d] = %x, exp_result[%d] = %x\n", i,j, result.val[i][j], i*ELE_NUM+j, exp_result[i*ELE_NUM+j]);
      |                                                                           ~^                                         ~~~~~~~~~~~~~~~~~~~~~~~
      |                                                                            |                                                   |
      |                                                                            unsigned int                                        int32_t {aka long int}
      |                                                                           %lx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsrdotiirq_v_i32_d3s3.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsrdotiirq_v_i32_d3s3"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsrdotiirq_v_i32_d3s3.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsrdotiirq_v_i32_d3s3.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed